# tridme-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile  setup.sh
Core/: README.md  makefile
Core/include/: camera.h  core.h  engine.h  error.h  index_buffer.h  mesh_renderer.h  renderer.h  shader.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h  window.h
Core/src/: camera.cpp  glad.c  index_buffer.cpp  layer.cpp  mesh.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp  window.cpp
Includes/: camera.h  core.h  error.h  index_buffer.h  renderer.h  shader.h  texture.h  vertex_buffer.h  vertex_buffer_layout.h  window.h
Lib/: libglfw.so.3.4
Test/: Basic.shader  debug  glad.c  main.cpp  makefile  stb_image.cpp  test
Test/include/: camera.h  engine.h  logging.h  mesh.h  renderer.h
core/: CMakeLists.txt
core/include/: engine.h  error.h  event.h  gui_layer.h  layer.h  layer_stack.h  logging.h  mesh.h  mesh_renderer.h  renderer.h  shader.h  texture.h  vertex_array.h  vertex_buffer_layout.h  window.h
core/include/Kernel/: Core.h  Engine.h  Error.h
core/include/Nodes/: Camera.h
core/include/System/Event/: Event.h
core/include/System/Layers/: GUILayer.h  Layer.h  LayerStack.h
core/include/System/Renderer/: IndexBuffer.h  Mesh.h  MeshRenderer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
core/include/System/Window/: Window.h
core/src/: CMakeLists.txt  camera.cpp  engine.cpp  event.cpp  gui_layer.cpp  index_buffer.cpp  layer_stack.cpp  logging.cpp  mesh_renderer.cpp  renderer.cpp  window.cpp
core/src/Kernel/: Engine.cxx
core/src/Nodes/: Camera.cxx
core/src/System/Event/: Event.cxx
core/src/System/Layers/: GUILayer.cxx  Layer.cxx  LayerStack.cxx
core/src/System/OpenGL/: glad.c
core/src/System/Renderer/: IndexBuffer.cxx  Mesh.cxx  MeshRenderer.cxx  Renderer.cxx  Shader.cxx  Texture.cxx  VertexArray.cxx  VertexBuffer.cxx
core/src/System/Window/: Window.cxx
core/src/Utils/: Logging.cxx
docs/: event.md
editor/: CMakeLists.txt
editor/include/: Layer.h
editor/src/Entry/: Main.cxx
editor/src/GUI/: Layer.cxx
vendors/glad/include/: glad.h
vendors/glad/include/glad/: glad.h
